--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -24,10 +24,11 @@ $flowAreaHeight : $chatAreaHeight * 0.8
 .flowArea
   height: $flowAreaHeight
   background: darkcyan
+  overflow: auto
   p
     margin-top: $flowAreaHeight * 0.02
-    margin-left: $chatAreaWidth * 0.01
-    margin-right: $chatAreaWidth * 0.01
+    margin-left: $chatAreaWidth * 0.02
+    margin-right: $chatAreaWidth * 0.02
     height: 1.4em
     line-height: 1.4em
     padding: 0 $chatAreaWidth * 0.02
@@ -55,8 +56,6 @@ $newMsgAreaHeight : $chatAreaHeight * 0.1
   margin-top: $newMsgAreaHeight * 0.2
   margin-left: $newMsgAreaHeight * 0.1
 
-.sendBtn
-  width: $chatAreaWidth * 0.16
-  height: $newMsgAreaHeight * 0.6
+
 
 
