--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,26 @@
-.chatMain {
-  width: 300px;
+.chatApp {
+  width: 400px;
   height: 504px;
   background: greenyellow;
   border: 1px solid #000;
   margin-left: 10px; }
+
+.chatMain {
+  width: 300px;
+  float: left; }
+
+.memberListArea {
+  width: 100px;
+  height: 504px;
+  float: left;
+  background: seagreen; }
+  .memberListArea ul {
+    list-style: none;
+    margin: 0;
+    padding: 0 0 0 10px;
+    overflow: auto; }
+    .memberListArea ul li {
+      margin-top: 5px; }
 
 .targetArea {
   height: 50.4px;
@@ -16,11 +33,11 @@
     display: inline-block; }
 
 .flowArea {
-  height: 403.2px;
+  height: 453.6px;
   background: darkcyan;
   overflow: auto; }
   .flowArea p {
-    margin-top: 8.064px;
+    margin-top: 9.072px;
     margin-left: 6px;
     margin-right: 6px;
     height: 1.4em;
@@ -44,9 +61,18 @@
 .editIpt {
   border: none;
   outline: none;
-  width: 240px;
+  width: 225px;
   height: 30.24px;
   margin-top: 10.08px;
   margin-left: 5.04px; }
+
+.loginArea {
+  width: 300px;
+  height: 504px;
+  background: #008080;
+  float: left; }
+  .loginArea form {
+    width: 270px;
+    margin: 0 auto; }
 
 /*# sourceMappingURL=main.css.map */
